--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.0</version>
+            </plugin>
+
         </plugins>
     </build>
     <dependencies>
@@ -43,7 +50,15 @@
             <systemPath>${project.basedir}/lib/studentdb-1.1.1.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
     </dependencies>
+
+
 
 
 </project>
